@@ -1,3 +1,4 @@
+Send messages when the lock is toggled
 Send messages when the scaled up value changes
 Send messages when the container state changes
 Added messages for changing representations
